--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -423,6 +423,10 @@
 	.text-header
 		padding-top: 28vw
 		padding-bottom: 15vw
+		.container-fluid 
+			justify-content: flex-start
+			align-items: flex-start
+			text-align: left
 	.privacy-title
 		font-size: 5.2vw
 	.privacy-item p
@@ -498,7 +502,7 @@
 		padding-top: 20.267vw
 		padding-bottom: 8vw
 	.footer 
-		font-size: 4.800vw
+		font-size: 3.2vw
 		padding-top: 9.867vw
 		padding-bottom: 5.867vw
 		.container-fluid 
@@ -581,7 +585,7 @@
 @media only screen and (max-width : 480px)
 	/**/
 	.header__menu-link
-		font-size: 9.067vw
+		font-size: 6vw
 	.header__menu
 		ul.active
 			padding-top: 40vw
