--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -434,6 +434,10 @@
 	.privacy-content
 		padding-top: 15vw
 		padding-bottom: 15vw
+	.about .col-lg-6.col-lg-6--img
+		position: absolute
+		bottom: 0 
+		left: 0
 
 
 
