--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -476,6 +476,8 @@ h2
 //end page header
 .page-header--transaction
 	background: url('../img/transaction-bg.jpg')
+	background-size: cover
+	background-repeat: no-repeat
 .transactions
 	padding-top: 7.396vw
 	padding-bottom: 9.583vw
@@ -535,7 +537,7 @@ h2
 	top: 0 
 	right: 0
 	z-index: 99999
-	transform: translateX(100%)
+	transform: translateX(110%)
 	transition: all 0.5s
 	background: #fff
 	border-left: 1px solid $red	
@@ -703,7 +705,7 @@ label
 		font-size: 18px
 .map
 	position: absolute
-	top: 8vw
+	top: 0vw
 	right: 0 
 	svg 
 		width: 45vw
