--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -1,7 +1,15 @@
 @import "vars"
 
 /*==========  Desktop First  ==========*/
-
+@media only screen and (max-width: 3800px)
+	.map
+		top: 2vw
+@media only screen and (max-width: 2700px)
+	.map
+		top: 5vw
+@media only screen and (max-width: 1920px)
+	.map
+		top: 8vw
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
 	/**/
